# logMCP

./: .gitignore  README.md  main.py  mcp.json  pyproject.toml
src/: kube.py  server.py
tests/: test_kube.py
